--- a/.classpath
+++ b/.classpath
@@ -18,7 +18,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -51,5 +51,11 @@
 	<classpathentry kind="lib" path="C:/Users/Lenovo/Downloads/sele/sele/libs/httpcore-4.4.9.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Lenovo/Downloads/sele/sele/libs/okhttp-3.10.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Lenovo/Downloads/sele/sele/libs/okio-1.14.1.jar"/>
+	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
+		<attributes>
+			<attribute name="test" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
